# aws-vide-oh

./: .gitignore  README.md
vide-oh-be/: .gitignore  Makefile  serverless.yml
vide-oh-be/comment-service/: .env  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
vide-oh-be/comment-service/src/: auth.rs  connection.rs  handler.rs  main.rs  repository.rs  router.rs
vide-oh-be/support-service/: Makefile  go.mod  main.go
vide-oh-be/support-service/database/: client.go
vide-oh-be/support-service/middleware/: auth.go
vide-oh-be/support-service/models/: connection.go  message.go
vide-oh-be/support-service/utils/: utils.go
vide-oh-be/support-service/websocket/: handler.go
vide-oh-be/user-service/: Makefile  go.mod  main.go
vide-oh-be/user-service/auth/: jwt.go
vide-oh-be/user-service/authorizer/: main.go
vide-oh-be/user-service/controllers/: tokencontroller.go
vide-oh-be/user-service/handler/: main.go
vide-oh-be/user-service/middleware/: auth.go
vide-oh-be/user-service/utils/: utils.go
vide-oh-be/video-service/: Makefile  go.mod  main.go  test.html  upload-test.html
vide-oh-be/video-service/controllers/: videocontroller.go
vide-oh-be/video-service/middleware/: auth.go
vide-oh-be/video-service/models/: video.go
vide-oh-be/video-service/utils/: utils.go
vide-oh-fe/: .env  package-lock.json  testserver.js  vue.config.js
vide-oh-fe/src/: main.js
vide-oh-fe/src/components/: Messages.vue  Register.vue  ReportedComments.vue  ReportedVideos.vue  SearchVideos.vue  SupportMessages.vue  UploadVideo.vue  VideoView.vue
vide-oh-fe/src/router/: index.js
vide-oh-fe/src/services/: apiClient.js
vide-oh-fe/src/views/: AdministratorPage.vue  Login.vue  RegisteredPage.vue  SupportPage.vue  UnregisteredPage.vue
vide-oh-infra/: cdk.json  package.json
vide-oh-infra/lib/: dynamodb-stack.ts  rds-stack.ts  vide-oh-infra-stack.ts  vpc-stack.ts  vue-app-stack.ts  websocket-stack.ts
vide-oh-infra/test/: vide-oh-infra.test.ts
