[package]
name = "comment-service"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_codegen = "0.5.0"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.5.0", features = ["postgres", "bb8"] }
diesel_async_migrations = "0.15.0"
bb8 = "0.8.0"
dotenv = "0.15.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
lambda-web = { version = "0.2.0", features=["rocket05"] }
chrono = { version = "0.4", features = ["serde"] }
jwt = "0.16.0"
rusoto_core = { version="0.48.0", default_features=false, features=["rustls"] }
rusoto_secretsmanager = { version="0.48.0", default_features=false, features=["rustls"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
anyhow = "1.0"
